Fix overflow timeline description

--- a/_sass/layout/timeline.scss
+++ b/_sass/layout/timeline.scss
@@ -59,6 +59,7 @@
   margin-bottom: $grid-gap;
 
   p {
+    overflow: auto;
     text-align: justify;
   }
 
